--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,24 @@
   <div class="column">
     <!-- <img class="ui small left floated image" src="images/services-img-1.jpg"> -->
     <div class="ui piled segment items-2">
-      <h2 class="ui header header-2">Comunication</h2>
+      <h2 class="ui header header-2">Contact</h2>
 
       <div class="items-2 item-2">
 
         <div class="ui list">
 
+          <div class="item item-2-1">
+            <div class="content">
+              30 Tangier Way, Burgh Heath, KT20 5NB, Surrey, UK
+            </div>
+          </div>
+
+
+
           <div class="item icons-and-copy item-7 icons-and-copy-js">
             <i class="call icon"></i>
             <div class="content">
-              1 (800) 232 3233
+              +44 (0) 7766.610.587
             </div>
           </div>
 
@@ -48,38 +56,8 @@
 
 </div>
 
-
-<div class="row section-5">
-  <h2 class="ui header header-2">Contact form</h2>
-  <div class="ui tiny form">
-
-    <div class="ui left icon input field user">
-      <input id='user' placeholder="Name" type="text">
-      <i class="user icon"></i>
-    </div>
-
-    <div class="ui left icon input field mail">
-      <input id='email' placeholder="Email" type="email">
-      <i class="mail icon"></i>
-    </div>
-
-    <div class="ui left icon input field textarea">
-      <textarea id='description' placeholder="Message"></textarea>
-      <i class="write icon"></i>
-    </div>
-
-    <div class="ui left icon input field call">
-      <input id='phone' placeholder="Phone Number" type="text">
-      <i class="call icon"></i>
-    </div>
-
-      <button id="careerBtn-js" class="ui huge primary button">Submit<i class="angle right icon"></i></button>
-  </div>
-
-  <div class="ui fitted divider"></div>
-
+<div class="row section-5 section-5-js">
 </div>
-
 
 <div class="row section-6">
   <div id="map"></div>
