--- a/home.html
+++ b/home.html
@@ -4,12 +4,17 @@
     <div class="section-4-item-1">
       <h1 class="section-4-item-1-1">Making time for you!</h1>
       <div class="ui fitted divider"></div>
-      <p class="section-4-item-1-2">We understand the challenges that lie ahead when organising care for yourself or a loved one. We are here to help take the stress away arranging a safe and caring service in your own home.</p>
+      <p class="section-4-item-1-2">At Forget-Me-Not Care Services we understand the challenges that lie ahead when organising care for yourself or a loved one. We are here to help take the stress away. We will work with you to arrange a safe and caring service in your own home.</p>
     </div>
+    <div class="section-4-item-1-3">
+      <img src="images/cqc-sm-logo.png">
+      <h3>We are a CQC registered care provider.</h3>
+  </div>
 
   </div>
-</div>
 
+      
+</div>
 
 <div class="row section-5">
   <div class="column">
@@ -21,10 +26,10 @@
             <i class="home icon icon-js"></i>
           </div>
           <div class="content">
-            <h3>Home services</h3>
+            <h3>Home Care</h3>
             <div class="ui fitted divider"></div>
             <div class="meta">
-              <p>We offer a range of home care services...</p>
+              <p>We offer a full range of home care services</p>
             </div>
             <button class="ui active button icon-button-js">
               More Details
@@ -41,7 +46,7 @@
             <h3>Day Trips</h3>
             <div class="ui fitted divider"></div>
             <div class="meta">
-              <p>Soon we will offer day trips and social events to our clients...</p>
+              <p>We will arrange day trips and social events for our clients</p>
             </div>
             <button class="ui active button icon-button-js">
               More Details
@@ -58,7 +63,7 @@
             <h3>Companionship</h3>
             <div class="ui fitted divider"></div>
             <div class="meta">
-              <p>We offer a flexible and cheerful companionship solution...</p>
+              <p>We offer a flexible and cheerful companionship solution</p>
             </div>
             <button class="ui active button icon-button-js">
               More Details
@@ -75,7 +80,7 @@
             <h3>Short Term Care</h3>
             <div class="ui fitted divider"></div>
             <div class="meta">
-              <p>Short term care that is cater to each client needs... </p>
+              <p>We can design a short-term care package tailored towards your specific needs</p>
             </div>
             <button class="ui active button icon-button-js">
               More Details
@@ -88,13 +93,12 @@
   </div>
 </div>
 
- <div class="row section-6">
+<div class="row section-6">
   <div class="column">
 
       <div class="inner-content">
-        <!-- <img class="ui middle aligned image .inner-content-itme-1" src="images/logo_icon.svg"> -->
         <div class="inner-content-itme-1"></div>
-        <h2>Our highly experienced caregiving team always gives superb treament to our patients</h2>
+        <h2>Our highly experienced care team is here to make time for you</h2>
         <button class="ui btn-services-js huge primary button btns-js">Learn More<i class="angle right icon"></i></button>
       </div>
       <div class="background-2"></div>
