--- a/services.html
+++ b/services.html
@@ -2,30 +2,30 @@
 
   <div class="inner-content-itme-1"></div>
 
-  <div class="column">
+  <div id="service-1" class="column">
     <!-- <img class="ui small left floated image" src="images/services-img-1.jpg"> -->
     <div class="ui piled segment">
       <h2 class="ui header">
         <i class="home icon"></i>
         <div class="content">
-          Home Services
-          <div class="sub header">We offer a range of home care services</div>
+          Home Care
+          <div class="sub header">We offer a full range of home care services</div>
         </div>
       </h2>
-      <p>We at Forget-Me-Not Care Services understand that it can be hard to let a stranger into your home. This is why we carry out a thorough background check on all our carers before they can start their role and we ensure they maintain the highest training standards throughout. Our core values are to be honest, trustworthy, kind and safe with all our clients and their loved ones.</p>
+      <p>Our daily home care service helps you to stay at home with a visiting carer who can assist with support and personal care at the times of day when you need it. We at Forget-Me-Not Care Services understand that it can be hard to let a stranger into your home. This is why we carry out a thorough background check on all our carers before they can start their role and we ensure they maintain the highest training standards throughout. Our core values are to be honest, trustworthy, kind and safe with all our clients and their loved ones.</p>
 
       <p class="list-title">We offer a range of home care services such as:</p>
       <ul>
-        <li>Helping clients get out of bed.</li>
-        <li>Washing and dressing.</li>
-        <li>Meal preparation and cooking.</li>
-        <li>Light housework.</li>
-        <li>An evening visit to help with your night time routine.</li>
-        <li>Shop trips.</li>
-        <li>And many more!</li>
+        <li>Helping clients get out of bed</li>
+        <li>Washing and dressing</li>
+        <li>Meal preparation and cooking</li>
+        <li>Light housework</li>
+        <li>An evening visit to help with your night time routine</li>
+        <li>Shop trips</li>
+        <li>And much more!</li>
       </ul>
        
-       <p>We aim to provide a service that promotes our clients’ independence, not take it away. The power is with the client and family to create a care package that suits their needs.</p>
+       <p>The minimum duration of a visit is 30 minutes and we can provide as little as one visit a week or up to four visits a day. Our daily home care service (sometimes referred to as domiciliary care) is available across most parts of Surrey including Epsom & Ewell, Banstead & Tadworth, Worcester Park & Cheam, as well as surrounding areas.</p>
     </div>
   </div>
 
@@ -40,7 +40,7 @@
           <i class="bus icon"></i>
           <div class="content">
             Day Trips
-            <div class="sub header">Soon we will offer day trips and social events to our clients</div>
+            <div class="sub header">We will arrange day trips and social events for our clients</div>
           </div>
         </h2>
         <p>We all like to get out of the house now and again, so why should it be any different for our over 65’s? As our business grows, we would like to offer more day trips and social events to our clients. Due to modern life, work commitments and the fact more and more families live a considerable distance apart it can be hard to assist your loved ones with activities. This is where Forget-Me-Not Care Services aims to help, we can provide a qualified carer to take them out and about to a destination of their choice.</p>
@@ -72,7 +72,7 @@
         <i class="hotel icon"></i>
         <div class="content">
           Short Term Care
-          <div class="sub header">Short term care that is cater to each client needs</div>
+          <div class="sub header">We can design a short-term care package tailored towards your specific needs</div>
         </div>
       </h2>
       <p>Have you or a loved one recently been discharged from hospital? You may only require a few visits to settle you back in to your home life. We can help get you back on to your feet again and you can choose when, where and how many visits work for you. If it helps, we can even offer to pick you up from the hospital/appointment at discharge and make that ever welcomed cup of tea when you get home.</p>
@@ -87,7 +87,7 @@
     <div class="inner-content">
       <!-- <img class="ui middle aligned image .inner-content-itme-1" src="images/logo_icon.svg"> -->
       <div class="inner-content-itme-1"></div>
-      <h2>Our highly experienced caregiving team always gives superb treament to our patients</h2>
+      <h2>Our highly experienced care team is here to make time for you</h2>
     </div>
     <div class="background-2"></div>
   </div>
