--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
   <div class="column">
 
     <div class="section-4-item-1">
-      <h1 class="section-4-item-1-1">Long and short-term care</h1>
+      <h1 class="section-4-item-1-1">Meet our dedicated care team</h1>
       <div class="ui fitted divider"></div>
-      <p class="section-4-item-1-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <p class="section-4-item-1-2">We are a highly experienced team of care professionals. We are truly passionate about what we do and would love to bring our enthusiasm to your care journey</p>
     </div>
 
   </div>
@@ -15,66 +15,54 @@
   <div class="column">
 
     <div class="ui stackable four column grid">
-      <a class="column">
+      <div class="column">
         <div class="ui card">
           <div class="items item-1">
-            <img class="ui small left floated image" src="images/our-staff-1.jpg">
-          </div>
-          <div class="content">
-            <h3>Staff Name</h3>
-            <h2>Staff Occupation</h2>
-            <div class="ui fitted divider"></div>
-            <div class="meta">
-              <p>Tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="ui fluid image">
+              <div class="ui blue ribbon label">
+                Registered Manager
+              </div>
+              <img src="images/kirsten-thomson.jpg">
             </div>
           </div>
+          <div class="content">
+            <h3>Kirsten Thomson</h3>
+            <div class="ui primary button btn-modal-js"><i class="address card outline icon"></i>More about Kirsten</div>
+          </div>
         </div>
-      </a>
-      <a class="column">
+      </div>
+      <div class="column">
         <div class="ui card">
           <div class="items item-2">
-            <img class="ui small left floated image" src="images/our-staff-2.jpg">
-          </div>
-          <div class="content">
-            <h3>Staff Name</h3>
-            <h2>Staff Occupation</h2>
-            <div class="ui fitted divider"></div>
-            <div class="meta">
-              <p>Tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="ui fluid image">
+              <div class="ui blue ribbon label">
+                Care Manager
+              </div>
+              <img src="images/sophie-powley.jpg">
             </div>
           </div>
+          <div class="content">
+            <h3>Sophie Powley</h3>
+            <div class="ui primary button btn-modal-js"><i class="address card outline icon"></i>More about Sophie</div>
+          </div>
         </div>
-      </a>
-      <a class="column">
+      </div>
+      <div class="column">
         <div class="ui card">
           <div class="items item-3">
-            <img class="ui small left floated image" src="images/our-staff-3.jpg">
-          </div>
-          <div class="content">
-            <h3>Staff Name</h3>
-            <h2>Staff Occupation</h2>
-            <div class="ui fitted divider"></div>
-            <div class="meta">
-              <p>Tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="ui fluid image">
+              <div class="ui blue ribbon label">
+                Director
+              </div>
+              <img src="images/michael-ruzic-gauthier.jpg">
             </div>
           </div>
-        </div>
-      </a>
-      <a class="column">
-        <div class="ui card">
-          <div class="items item-4">
-            <img class="ui small left floated image" src="images/our-staff-4.jpg">
-          </div>
           <div class="content">
-            <h3>Staff Name</h3>
-            <h2>Staff Occupation</h2>
-            <div class="ui fitted divider"></div>
-            <div class="meta">
-              <p>Tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
+            <h3>Michael Ruzic-Gauthier</h3>
+            <div class="ui primary button btn-modal-js"><i class="address card outline icon"></i>More about Michael</div>
           </div>
         </div>
-      </a>
+      </div>
     </div>
 
   </div>
@@ -86,10 +74,33 @@
     <div class="inner-content">
       <!-- <img class="ui middle aligned image .inner-content-itme-1" src="images/logo_icon.svg"> -->
       <div class="inner-content-itme-1"></div>
-      <h2>Our highly experienced caregiving team always gives superb treament to our patients</h2>
+      <h2>Our highly experienced care team is here to make time for you</h2>
       <button class="ui btn-services-js huge primary button btns-js">Learn More<i class="angle right icon"></i></button>
     </div>
     <div class="background-2"></div>
 
 </div>
+</div>
+<!--  ======== Staff Modal ========== -->
+<div class="ui modal modal-js">
+  <i class="close icon"></i>
+  <div class="header name name-js"></div>
+  <div class="image content">
+    <div class="ui medium image">
+      <img src="">
+    </div>
+    <div class="description">
+      <div class="ui header title-js"></div>
+      <p class="ui info info-js"></p>
+    </div>
+  </div>
+  <div class="actions">
+<!--     <div class="ui black deny button">
+      Nope
+    </div>
+    <div class="ui positive right labeled icon button">
+      Yep, that's me
+      <i class="checkmark icon"></i>
+    </div> -->
+  </div>
 </div>
