--- a/careers.html
+++ b/careers.html
@@ -10,9 +10,7 @@
           Why work for us?
         </div>
       </h2>
-      <p>Our service has been built on a foundation of care experience. Since we have worked in the care industry ourselves we have a good understanding of how unappreciated you can feel. At Forget-Me-Not Care Services we want our staff to feel valued and rewarded for the hard work they do. We are offer an attractive pay package for our carers along with industry leading training. We can offer flexible working patterns and will assist in anyway we can to help you have the right work life balance. We believe if we look after our staff, our staff will look after our clients.</p>
-
-      <p>Can we add a link that enables to person to enter their name, contact details and best time to call? After a phone call with the person we can email/post an application form.</p>
+      <p>Our service has been built on a foundation of care experience. Since we have worked in the care industry ourselves we have a good understanding of how unappreciated you can feel. At Forget-Me-Not Care Services we want our staff to feel valued and rewarded for the hard work they do. We are offering an attractive pay package for our carers along with training. We can offer flexible working patterns and will assist in anyway we can to help you have the right work life balance.</p>
 
     </div>
 
@@ -48,54 +46,15 @@
 
 </div>
 
-
-<div class="row section-5">
-  <h2 class="ui header header-2">
-    <div class="content">
-      Get in Touch with Us
-    </div>
-  </h2>
-  <div class="ui tiny form">
-
-    <div class="ui left icon input field user">
-      <input id='user' placeholder="Name" type="text">
-      <i class="user icon"></i>
-    </div>
-
-    <div class="ui left icon input field mail">
-      <input id='email' placeholder="Email" type="email">
-      <i class="mail icon"></i>
-    </div>
-
-    <div class="ui left icon input field call">
-      <input id='phone' placeholder="Phone Number" type="text">
-      <i class="call icon"></i>
-    </div>
-
-    <div class="ui left icon input field time">
-      <input id='time' placeholder="Best Time to be Contacted" type="text">
-      <i class="hourglass start icon"></i>
-    </div>
-
-    <div class="ui left icon input field textarea">
-      <textarea id='description' placeholder="Abbreviatiated Description of Your Caregiving Experience"></textarea>
-      <i class="write icon"></i>
-    </div>
-
-      <button id="careerBtn-js" class="ui huge primary button">Submit<i class="angle right icon"></i></button>
-  </div>
-
-  <div class="ui fitted divider"></div>
-
+<div class="row section-5 section-5-js">
 </div>
-
 
 <div class="row section-6">
   <div class="column">
     <div class="inner-content">
       <!-- <img class="ui middle aligned image .inner-content-itme-1" src="images/logo_icon.svg"> -->
       <div class="inner-content-itme-1"></div>
-      <h2>Our highly experienced caregiving team always gives superb treament to our patients</h2>
+      <h2>Our highly experienced care team is here to make time for you</h2>
     </div>
     <div class="background-2"></div>
   </div>
